log
Thu 25 Apr 2024 07:33:54 PM UTC: 
 tests:  0|6
total_score: 0/70
f13c670
Thu 25 Apr 2024 07:43:19 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
4c6649f
Thu 25 Apr 2024 07:45:41 PM UTC: 
 hashmap.c | 52 ++++++++++++++++++++++++++--------------------------
 1 file changed, 26 insertions(+), 26 deletions(-)
 tests:  5|4
total_score: 30/70
93654d0
Thu 25 Apr 2024 07:48:21 PM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
2f39547
Thu 25 Apr 2024 08:33:40 PM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
78abdb4
Thu 25 Apr 2024 08:35:14 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
c4f5fa5
Thu 25 Apr 2024 08:36:57 PM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
2b65e1b
Thu 25 Apr 2024 08:40:33 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:65:8: error: unused variable ‘size’ [-Werror=unused-variable]
   65 |   long size = map->size;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
bae1a7b
Thu 25 Apr 2024 08:41:19 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  16|1
total_score: 60/70
13a479a
Thu 25 Apr 2024 08:43:18 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
7e92bc4
Sat 27 Apr 2024 03:13:21 AM UTC: 
 hashmap.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  17|0
total_score: 70/70
cb9993f
Sat 27 Apr 2024 03:18:19 AM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:135:36: error: expected ‘;’ before ‘}’ token
  135 |     pos = (pos + 1) % map->capacity
      |                                    ^
      |                                    ;
  136 |   } while(map->buckets[pos] == NULL || map->buckets[pos]->key == NULL);
      |   ~                                 
hashmap.c:133:8: error: unused variable ‘aux’ [-Werror=unused-variable]
  133 |   long aux = pos;
      |        ^~~
cc1: all warnings being treated as errors
Compilation failed
e304f9a
